--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <h1 style="text-align: center; font-size: 72px; font-family: Verdana, Geneva, Tahoma, sans-serif;">GoFit</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.php"><img src="images/brandicon.png" height="75px"></a>
+            <a class="navbar-brand" href="index.html"><img src="images/brandicon.png" height="75px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.php" style="font-size: 22px;">Home</a>
+                        <a class="nav-link" href="index.html" style="font-size: 22px;">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="equipment.php" style="font-size: 22px;">Equipments</a>
+                        <a class="nav-link" href="equipment.html" style="font-size: 22px;">Equipments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="clothing.php" style="font-size: 22px;">Apparels</a>
+                        <a class="nav-link" href="clothing.html" style="font-size: 22px;">Apparels</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contact.php"
+                        <a class="nav-link active" aria-current="page" href="contact.html"
                             style="font-size: 22px;">Reach Us</a>
                     </li>
                 </ul>
