--- a/equipment.html
+++ b/equipment.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>GoFit Apparels</title>
+    <title>GoFit Equipments</title>
 </head>
 
 <body>
     <h1 style="text-align: center; font-size: 72px; font-family: Verdana, Geneva, Tahoma, sans-serif;">GoFit</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.php"><img src="images/brandicon.png" height="75px"></a>
+            <a class="navbar-brand" href="index.html"><img src="images/brandicon.png" height="75px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,17 +22,17 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.php" style="font-size: 22px;">Home</a>
+                        <a class="nav-link" href="index.html" style="font-size: 22px;">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="equipment.php" style="font-size: 22px;">Equipments</a>
+                        <a class="nav-link active" aria-current="page" href="equipment.html"
+                            style="font-size: 22px;">Equipments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="clothing.php"
-                            style="font-size: 22px;">Apparels</a>
+                        <a class="nav-link" href="clothing.html" style="font-size: 22px;">Apparels</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.php" style="font-size: 22px;">Reach Us</a>
+                        <a class="nav-link" href="contact.html" style="font-size: 22px;">Reach Us</a>
                     </li>
                 </ul>
             </div>
@@ -41,35 +41,35 @@
 
     <div class="container">
         <br>
-        <h1 style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif; font-size: 48px;">APPARELS</h1>
+        <h1 style="text-align: center; font-family: Georgia, 'Times New Roman', Times, serif; font-size: 48px;">EQUIPMENTS</h1>
         <br><br>
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/mtracksuit.png" class="card-img-top" alt="..." height="250px">
+                    <img src="images/db.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Addidas Mens Tracksuit</h5>
-                        <p class="card-text"><br><strong>Rs. 1499/-</strong>&emsp;<del>Rs. 1999/-</del> </p>
+                        <h5 class="card-title">Heavy Duty Dumbbells(25KG)</h5>
+                        <p class="card-text"><br><strong>Rs. 799/-</strong>&emsp;<del>Rs. 1199/-</del> </p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/mtshirt.png" class="card-img-top" alt="..." height="250px">
+                    <img src="images/kb.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Mens T-Shirt</h5>
-                        <p class="card-text"><br><strong>Rs. 499/-</strong>&emsp;<del>Rs. 799/-</del></p>
+                        <h5 class="card-title">Onnit Kettlebell(24KG)</h5>
+                        <p class="card-text"><br><strong>Rs. 599/-</strong>&emsp;<del>Rs. 999/-</del></p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/mshort.png" class="card-img-top" alt="..." height="250px">
+                    <img src="images/pullup.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Addidas Mens Shorts</h5>
-                        <p class="card-text"><br><strong>Rs. 699/-</strong>&emsp;<del>Rs. 999/-</del></p>
+                        <h5 class="card-title">Pullup Bar</h5>
+                        <p class="card-text"><br><strong>Rs. 999/-</strong>&emsp;<del>Rs. 1299/-</del></p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
@@ -79,30 +79,30 @@
         <div class="row">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/wtracksuit.png" class="card-img-top" alt="..." height="250px">
+                    <img src="images/bench.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Womens Tracksuit</h5>
-                        <p class="card-text"><br><strong>Rs. 999/-</strong>&emsp;<del>Rs. 1199/-</del></p>
+                        <h5 class="card-title">Bench Press Machine</h5>
+                        <p class="card-text"><br><strong>Rs. 4999/-</strong>&emsp;<del>Rs. 5499/-</del></p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/wtshirt.png" class="card-img-top" alt="..." height="250px">
+                    <img src="images/cycle.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Womens T-Shirts</h5>
-                        <p class="card-text"><br><strong>Rs. 399/-</strong>&emsp;<del>Rs. 699/-</del></p>
+                        <h5 class="card-title">Indoor Excercise Bike</h5>
+                        <p class="card-text"><br><strong>Rs. 3999/-</strong>&emsp;<del>Rs. 4999/-</del></p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/wtrousers.png" class="card-img-top" alt="..." height="250px">
+                    <img src="images/treadmill.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
-                        <h5 class="card-title">Womens Trousers</h5>
-                        <p class="card-text"><br><strong>Rs. 799/-</strong>&emsp;<del>Rs. 999/-</del></p>
+                        <h5 class="card-title">Treadmill Machine</h5>
+                        <p class="card-text"><br><strong>Rs. 7999/-</strong>&emsp;<del>Rs. 9999/-</del></p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
@@ -110,7 +110,6 @@
         </div>
         <br><br>
     </div>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
